--- a/00-install-operators/coo.yaml
+++ b/00-install-operators/coo.yaml
@@ -1,12 +1,17 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+    name: openshift-cluster-observability-operator
+---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: cluster-observability-operator
-  namespace: openshift-operators
+  namespace: openshift-cluster-observability-operator
 spec:
-  channel: development
+  channel: stable
   installPlanApproval: Automatic
   name: cluster-observability-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: cluster-observability-operator.0.4.1
+  startingCSV: cluster-observability-operator.v1.0.0
