--- a/metrics/coo-prometheus.yaml
+++ b/metrics/coo-prometheus.yaml
@@ -1,5 +1,5 @@
 # Apply this manifest once the coo-monitoring-stack is deployed.
-#  kubectl apply -f demos/otel-collector/openshift/coo-prometheus.yaml --server-side
+#  kubectl apply -f coo-prometheus.yaml --server-side
 apiVersion: monitoring.rhobs/v1
 kind: Prometheus
 metadata:
