--- a/00-install-operators/tracing-opentelemetry.yaml
+++ b/00-install-operators/tracing-opentelemetry.yaml
@@ -3,6 +3,14 @@ kind: Namespace
 metadata:
   name: openshift-opentelemetry-operator
 ---
+apiVersion: operators.coreos.com/v1
+kind: OperatorGroup
+metadata:
+  name: openshift-opentelemetry-operator-lhvms
+  namespace: openshift-opentelemetry-operator
+spec:
+  upgradeStrategy: Default
+---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
@@ -14,4 +22,4 @@ spec:
   name: opentelemetry-product
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: opentelemetry-operator.v0.113.0-2
+  startingCSV: opentelemetry-operator.v0.119.0-2
