--- a/00-install-operators/tracing-tempo.yaml
+++ b/00-install-operators/tracing-tempo.yaml
@@ -3,6 +3,14 @@ kind: Namespace
 metadata:
   name: openshift-tempo-operator
 ---
+apiVersion: operators.coreos.com/v1
+kind: OperatorGroup
+metadata:
+  name: openshift-tempo-operator-lhvms
+  namespace: openshift-tempo-operator
+spec:
+  upgradeStrategy: Default
+---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
