--- a/01-deploy-otel-collector.yaml
+++ b/01-deploy-otel-collector.yaml
@@ -101,7 +101,7 @@ spec:
     service:
       telemetry:
         logs:
-          level: "DEBUG"
+          level: "INFO"
           development: true
           encoding: "json"
         metrics:
