--- a/demo-app/k8s-annotated.yaml
+++ b/demo-app/k8s-annotated.yaml
@@ -13,6 +13,117 @@ kind: Namespace
 metadata:
   name: tutorial-application-backend1
 ---
+apiVersion: opentelemetry.io/v1beta1
+kind: OpenTelemetryCollector
+metadata:
+  name: otel
+  namespace: tutorial-application
+spec:
+  image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector-contrib:0.119.0
+  observability:
+    metrics:
+      enableMetrics: true
+  config:
+    receivers:
+      otlp:
+        protocols:
+          grpc: {}
+          http: {}
+      jaeger:
+        protocols:
+          grpc: {}
+          thrift_http: {}
+          thrift_compact: {}
+          thrift_binary: {}
+      zipkin: {}
+
+    processors:
+      tail_sampling:
+        decision_wait: 5s
+        policies:
+          [
+            {
+              name: policy,
+              type: string_attribute,
+              string_attribute: { key: result, values: ["1", "6"] }
+            }
+          ]
+
+      k8sattributes: {}
+      batch: {}
+      memory_limiter:
+        check_interval: 1s
+        limit_percentage: 75
+        spike_limit_percentage: 25
+
+    exporters:
+      debug: {}
+
+      otlp:
+        endpoint:  http://dev-collector.chainsaw-multitenancy.svc.cluster.local:4317
+        tls:
+          insecure: true
+
+    service:
+      telemetry:
+        logs:
+          level: "INFO"
+          development: true
+          encoding: "json"
+        metrics:
+          readers:
+            - pull:
+                exporter:
+                  prometheus:
+                    host: '0.0.0.0'
+                    port: 8889
+          level: detailed
+      pipelines:
+        # Remove this section if Tempo is not deployed
+        traces:
+          receivers: [otlp, jaeger, zipkin]
+          processors: [memory_limiter, k8sattributes, batch]
+          exporters:
+            - debug
+            - otlp
+        logs:
+          receivers: [otlp]
+          processors: [memory_limiter, k8sattributes, batch]
+          exporters:
+            - otlp
+        metrics:
+          receivers: [otlp]
+          processors: [memory_limiter, k8sattributes, batch]
+          exporters:
+            - otlp
+---
+### RBAC for k8s attributes processor
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: otel-collector-tutorial-ns
+rules:
+  - apiGroups: [""]
+    resources: ["pods", "namespaces", "nodes"]
+    verbs: ["get", "watch", "list"]
+  - apiGroups: ["apps"]
+    resources: ["replicasets"]
+    verbs: ["get", "list", "watch"]
+---
+### RBAC for k8s attributes processor
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: otel-collector-tutorial-ns
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: otel-collector-tutorial-ns
+subjects:
+  - kind: ServiceAccount
+    name: otel-collector
+    namespace: tutorial-application
+---
 apiVersion: opentelemetry.io/v1alpha1
 kind: Instrumentation
 metadata:
@@ -20,7 +131,7 @@ metadata:
   namespace: tutorial-application
 spec:
   exporter:
-    endpoint: http://dev-collector.otel-observability.svc.cluster.local:4317
+    endpoint: http://otel-collector.tutorial-application.svc.cluster.local:4317
   propagators:
     - tracecontext
     - baggage
@@ -36,11 +147,13 @@ spec:
       # Python autoinstrumentation uses http/proto by default
       # so data must be sent to 4318 instead of 4317.
       - name: OTEL_EXPORTER_OTLP_ENDPOINT
-        value: http://dev-collector.otel-observability.svc.cluster.local:4318
+        value: http://otel-collector.tutorial-application.svc.cluster.local:4318
   java:
     env:
       - name: OTEL_LOGS_EXPORTER
         value: otlp
+      - name: OTEL_INSTRUMENTATION_METHODS_INCLUDE
+        value: io.opentelemetry.dice.RollController[getRandomNumber];
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -63,7 +176,7 @@ spec:
     spec:
       containers:
       - name: backend1
-        image: ghcr.io/pavolloffay/kubecon-eu-2023-opentelemetry-kubernetes-tutorial-backend1:latest 
+        image: ghcr.io/pavolloffay/kubecon-eu-2024-opentelemetry-kubernetes-tracing-tutorial-backend1:latest
         ports:
         - containerPort: 5000
 ---
@@ -103,7 +216,7 @@ spec:
     spec:
       containers:
       - name: backend2
-        image: ghcr.io/pavolloffay/kubecon-eu-2023-opentelemetry-kubernetes-tutorial-backend2:latest
+        image: ghcr.io/pavolloffay/kubecon-eu-2024-opentelemetry-kubernetes-tracing-tutorial-backend2:latest
         ports:
         - containerPort: 5165
 ---
@@ -141,7 +254,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: ghcr.io/pavolloffay/kubecon-eu-2023-opentelemetry-kubernetes-tutorial-frontend:latest
+        image: ghcr.io/pavolloffay/kubecon-eu-2024-opentelemetry-kubernetes-tracing-tutorial-frontend:latest
         env:
           - name: OTEL_INSTRUMENTATION_ENABLED
             value: "true"
