Use old metrics config
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/demo-app/k8s-annotated.yaml
+++ b/demo-app/k8s-annotated.yaml
@@ -71,12 +71,13 @@ spec:
           development: true
           encoding: "json"
         metrics:
-          readers:
-            - pull:
-                exporter:
-                  prometheus:
-                    host: '0.0.0.0'
-                    port: 8889
+          address: 0.0.0.0:8888
+#          readers:
+#            - pull:
+#                exporter:
+#                  prometheus:
+#                    host: '0.0.0.0'
+#                    port: 8889
           level: detailed
       pipelines:
         # Remove this section if Tempo is not deployed
