Export metrics via RW through the collector
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/export-metrics-from-ocp/cluster-monitoring-config.yaml
+++ b/export-metrics-from-ocp/cluster-monitoring-config.yaml
@@ -8,4 +8,6 @@ data:
   config.yaml: |
     prometheusK8s:
       remoteWrite:
-        - url: "http://otel-collector.observability.svc.cluster.local:9090/api/v1/write"
+    #    - url: "http://otel-collector.observability.svc.cluster.local:9090/api/v1/write"
+        - url: http://coo-monitoring-stack-prometheus.observability.svc.cluster.local:9090/api/v1/write
+    #      protobuf_message: io.prometheus.write.v2.Request
