Export metrics via RW through the collector
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/export-metrics-from-ocp/collector.yaml
+++ b/export-metrics-from-ocp/collector.yaml
@@ -19,7 +19,8 @@ spec:
         spike_limit_percentage: 25
 
     exporters:
-      debug: {}
+      debug:
+        verbosity: detailed
 
     service:
       telemetry:
