--- a/export-metrics-from-ocp/cluster-monitoring-config.yaml
+++ b/export-metrics-from-ocp/cluster-monitoring-config.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: openshift-monitoring
 data:
   config.yaml: |
-    prometheusK8s:
-      remoteWrite:
-    #    - url: "http://otel-collector.observability.svc.cluster.local:9090/api/v1/write"
-        - url: http://coo-monitoring-stack-prometheus.observability.svc.cluster.local:9090/api/v1/write
+#    prometheusK8s:
+#      remoteWrite:
+#    #    - url: "http://otel-collector.observability.svc.cluster.local:9090/api/v1/write"
+#        - url: http://coo-monitoring-stack-prometheus.observability.svc.cluster.local:9090/api/v1/write
     #      protobuf_message: io.prometheus.write.v2.Request
