Use native histograms
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/export-metrics-from-ocp/coo.yaml
+++ b/export-metrics-from-ocp/coo.yaml
@@ -21,13 +21,7 @@ spec:
       sendExemplars: true
       sendNativeHistograms: true
       writeRelabelConfigs:
-        # 1. Match the specific label and value you want to KEEP
+        # This configuration keeps only metrics from the example-app service which uses native histograms
         - sourceLabels: [ service ]  # The label to inspect
           regex: 'example-app'           # The value to match (e.g., 'production')
           action: keep                  # Only KEEP metrics that match the regex
-
-        # 2. You can also specify the metric name (or pattern) to further filter.
-        #    The '__name__' label holds the metric name.
-#        - sourceLabels: [ __name__ ]
-#          regex: 'http_requests_total'             # Keep only metrics starting with 'myapp_'
-#          action: keep                  # This is optional, but highly recommended for fine-tuning.
