--- a/export-metrics-from-ocp/coo-prometheus.yaml
+++ b/export-metrics-from-ocp/coo-prometheus.yaml
@@ -7,7 +7,14 @@ kind: Prometheus
 metadata:
   name: coo-monitoring-stack
 spec:
+#  image: prom/prometheus:v3.7.0
+  # https://github.com/rhobs/observability-operator/pull/906#pullrequestreview-3344554594
+  # likely to make to COO 1.3.0
+  # Prom operator 0.86.1 deploys Prometheus 3.6.0
+  image: prom/prometheus:v3.6.0
   convertClassicHistogramsToNHCB: true
+  additionalArgs:
+    - name: web.enable-remote-write-receiver
   enableFeatures:
     - metadata-wal-records
     - native-histograms
