--- a/export-metrics-from-ocp/coo.yaml
+++ b/export-metrics-from-ocp/coo.yaml
@@ -14,14 +14,13 @@ spec:
     disabled: true
   prometheusConfig:
     replicas: 1
-    enableOtlpHttpReceiver: true
     remoteWrite:
     - url: http://otel-collector.observability.svc.cluster.local:9090/api/v1/write
       messageVersion: V2.0
       sendExemplars: true
       sendNativeHistograms: true
-      writeRelabelConfigs:
-        # This configuration keeps only metrics from the example-app service which uses native histograms
-        - sourceLabels: [ service ]  # The label to inspect
-          regex: 'example-app'           # The value to match (e.g., 'production')
-          action: keep                  # Only KEEP metrics that match the regex
+#      writeRelabelConfigs:
+#        # This configuration keeps only metrics from the example-app service which uses native histograms
+#        - sourceLabels: [ service ]  # The label to inspect
+#          regex: 'example-app'           # The value to match (e.g., 'production')
+#          action: keep                  # Only KEEP metrics that match the regex
