--- a/export-metrics-from-ocp/collector.yaml
+++ b/export-metrics-from-ocp/collector.yaml
@@ -20,6 +20,11 @@ spec:
         verbosity: normal
       prometheus:
         endpoint: "0.0.0.0:8889"
+      otlphttp:
+        endpoint: http://vendor-prometheus.observability.svc.cluster.local:9090/api/v1/otlp/
+        tls:
+          insecure: true
+
 
     service:
       telemetry:
@@ -34,4 +39,4 @@ spec:
           processors: []
           exporters:
             - debug
-            - prometheus
+#            - otlphttp
