Small improvements and added OTEL Target allocator
Signed-off-by: Pavol Loffay <p.loffay@gmail.com>

--- a/00-install-operators/tracing-tempo.yaml
+++ b/00-install-operators/tracing-tempo.yaml
@@ -22,4 +22,4 @@ spec:
   name: tempo-product
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: tempo-operator.v0.14.1-2
+#  startingCSV: tempo-operator.v0.15.4-1
