--- a/00-install-operators/tracing-opentelemetry.yaml
+++ b/00-install-operators/tracing-opentelemetry.yaml
@@ -22,4 +22,4 @@ spec:
   name: opentelemetry-product
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: opentelemetry-operator.v0.119.0-2
+#  startingCSV: opentelemetry-operator.v0.127.0-1
